2014-01-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/time.c (xstrftime):  Explicit use of (double) when processing
	fractional seconds.

	* src/Makefile.am:  Build *.moc and *.qrc files for qt terminal in the
	same subdirectory as the *.o files.

	* src/datafile.c:  [xyz]ticlabels were losing resolution due to being
	passed through a float rather than a double.

	* src/datafile.c:  Handle error case of ticlabel function not returning
	a string.

2014-01-26  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/qt_term.cpp: Implement font metric caching. This solves
	a flickering issue when a large number of font changes are called (for
	example when rotating the world plot in world2.dem).

	* src/qtterminal/QtGnuplotInstance.*: New public function that sends a
	command to gnuplot and blocks until it receives the answer.

2014-01-21  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/qt_term.cpp: Fixed a regression introduced on 2014-01-18
	that caused glitches in font rendering when GE_fontprops events are missed.

2014-01-18  Bastian Maerkisch  <bmaerkisch@web.de>

	* configure.in config/mingw/Makefile config/msvc/Makefile
	src/show.c src/term.h src/win/wgnuplib.h src/win/wpause.c
	term/caca.trm:  New utterly useless, interactive color character art
	terminal driver "caca" using libcaca. Supports (RGB) colors, filled
	boxes and polygons, images, enhanced and rotated text, boxed labels,
	hypertext and mouse interaction. Export to different file formats is
	supported.
	Patch #605

2014-01-18  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/qt_term.cpp: Replace calls to fork and execlp by
	the portable QProcess::startDetached function.

	* src/qtterminal/qt_term.cpp: Delegate the font metric calculation to
	QtGnuplotScene. This eliminates the need of a QApplication in the main
	gnuplot program and thus significantly reduce the initialization time of
	the Qt terminal.
